# NR-SLAM

./: .gitignore  CMakeLists.txt  build.sh  result.md
apps/: CMakeLists.txt  andromeda.cc  endomapper.cc  hamlyn.cc  simulation.cc
data/andromeda/: filters.txt  settings.yaml
modules/: CMakeLists.txt
modules/SLAM/: settings.cc  settings.h  system.cc  system.h
modules/calibration/: camera_model.h  kannala_brandt_8.cc  kannala_brandt_8.h  pin_hole.cc  pin_hole.h
modules/datasets/: andromeda.cc  andromeda.h  endomapper.cc  endomapper.h  hamlyn.cc  hamlyn.h  simulation.cc  simulation.h
modules/features/: feature.h  shi_tomasi.cc  shi_tomasi.h
modules/map/: frame.cc  frame.h  keyframe.cc  keyframe.h  map.cc  map.h  mappoint.cc  mappoint.h  regularization_graph.cc  regularization_graph.h  temporal_buffer.cc  temporal_buffer.h
modules/mapping/: mapping.cc  mapping.h
modules/masking/: border_filter.cc  border_filter.h  bright_filter.cc  bright_filter.h  circle_filter.cc  circle_filter.h  filter.h  masker.cc  masker.h  predefined_filter.cc  predefined_filter.h
modules/matching/: lucas_kanade_tracker.cc  lucas_kanade_tracker.h
modules/optimization/: g2o_optimization.cc  g2o_optimization.h  landmark_vertex.cc  landmark_vertex.h  position_regularizer.cc  position_regularizer.h  position_regularizer_with_deformation.cc  position_regularizer_with_deformation.h  reprojection_error.cc  reprojection_error.h  reprojection_error_only_deformation.cc  reprojection_error_only_deformation.h  reprojection_error_only_pose.cc  reprojection_error_only_pose.h  reprojection_error_with_deformation.cc  reprojection_error_with_deformation.h  spatial_regularizer.cc  spatial_regularizer.h  spatial_regularizer_fixed.cc  spatial_regularizer_fixed.h  spatial_regularizer_with_deformation.cc  spatial_regularizer_with_deformation.h  spatial_regularizer_with_observation.cc  spatial_regularizer_with_observation.h
modules/stereo/: stereo_lucas_kanade.cc  stereo_lucas_kanade.h  stereo_matcher.h  stereo_pattern_matching.cc  stereo_pattern_matching.h
modules/tracking/: essential_matrix_initialization.cc  essential_matrix_initialization.h  monocular_map_initializer.cc  monocular_map_initializer.h  tracking.cc  tracking.h
modules/utilities/: dbscan.cc  dbscan.h  frame_evaluator.cc  frame_evaluator.h  geometry_toolbox.cc  geometry_toolbox.h  landmark_status.cc  landmark_status.h  statistics_toolbox.cc  statistics_toolbox.h  time_profiler.cc  time_profiler.h  types_conversions.cc  types_conversions.h
modules/visualization/: color_factory.cc  color_factory.h  image_visualizer.cc  image_visualizer.h  map_visualizer.cc  map_visualizer.h
